Re-fixed responsive issues
Removed scrollbar again (oops)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -491,7 +491,8 @@ footer {
   footer p {
     font-size: 1.2em !important; } }
 section {
-  background: url(../img/paper.png); }
+  background: url(../img/paper.png);
+  overflow: hidden; }
   section h1 {
     font-family: "Berkshire Swash", cursive;
     margin-bottom: 30px;
@@ -912,7 +913,7 @@ section {
 .contact {
   background: url(../img/paper.png);
   text-align: center;
-  padding: 50px; }
+  padding: 50px 0 50px 0; }
   .contact #formCandy {
     width: 100%;
     max-width: 1200px;
